--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --footer-backroung-color: #2f303a;
   --portfolio-btn-accent-color: #f5f4fa;
   --hero-btn-accent-color: #188ce8;
+  --social-imag-color:#AFB1B8
 }
 
 
@@ -64,6 +65,11 @@ body {
 
 .logo-footer-styles {
   color: var(--current-white-color);
+
+
+
+
+
 }
 
 /*****---------------- Навигация в шапке сайта------------------- *****/
@@ -124,10 +130,32 @@ body {
   color: var(--accent-color);
 }
 
+/* -------------SVG--------- */
+.smartphone {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.envelope{
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+}
 
 /***** <!---------------- Основной контент ----------------> *****/
 /* Герой */
 .hero {
+  max-width: 1600px;
+  min-height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)) , url(../images/hero-img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+
   background-color: var(--footer-backroung-color);
   text-align: center;
   padding-top: 200px;
@@ -148,6 +176,7 @@ body {
 }
 /* Кнопки */
 .btn {
+  cursor: pointer;
   min-height: 38px;
   padding: 6px 22px;
 
@@ -161,7 +190,7 @@ body {
   line-height: 1.62;
   letter-spacing: 0.03em;
 
-  cursor: pointer;
+  
   border: 0;
   border-radius: 4px;
 }
@@ -175,8 +204,8 @@ body {
   border-radius: 4px;
 }
 
-.btn.hero {
-  /* padding: 10px 32px; */
+.btn-hero {
+  
   width: 200px;
   height: 50px;
 
@@ -190,8 +219,8 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.btn.hero:focus,
-.btn.hero:hover {
+.btn-hero:focus,
+.btn-hero:hover {
   background-color: var(--hero-btn-accent-color);
 }
 /****** -----------Наши преимущества --------------- ******/
@@ -241,7 +270,27 @@ body {
   letter-spacing: 0.03em;
 }
 
-/***** Чем мы занимаемся *****/
+/* -SVG-наши-преимущества-*/
+.thumb{
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  border-radius: 4px;
+
+  width: 100%;
+  min-height: 120px;
+  border-radius: 4px;
+  background-color:var(--portfolio-btn-accent-color);
+}
+.antenna, .clock, .diagram, .astronaut{
+  display: block;
+  width: 70px;
+  height: 70px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/************************** Чем мы занимаемся ****************************/
 .not-padding-top{
   padding-top: 0;
 }
@@ -306,8 +355,75 @@ body {
   line-height: 1.18;
   letter-spacing: 0.03em;
 }
+/* --SVG-наша-команда-фото */
+.list .social{
+  display: flex;
+  justify-content: center;
+}
+.social-list:not(:last-child){
+  margin-right: 10px;
+}
 
-/*** Футер с ссылкой на  контактные данные ***/
+.social-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color:var(--social-imag-color)
+}
+.social-item:hover, .social-item:focus {
+  color: var(--current-white-color);
+  background-color: var(--accent-color);
+
+}
+
+.social-icon {
+  width: 20px;
+  height: 20px;
+  fill:currentColor
+}
+
+/* --------------Постоянные клиенты-------------  */
+
+.gerular-clients{
+  display: flex;
+  justify-content: center;
+  max-height: 184px;
+}
+
+.list-clients:not(:last-child){
+  margin-right: 30px;
+}
+  
+
+.client-item{
+display: flex;
+justify-content: center;
+align-items: center;
+
+width: 170px;
+height: 92px;
+
+color: var(--social-imag-color);
+border: 1px solid var(--social-imag-color);
+box-sizing: border-box;
+border-radius: 4px;
+}
+
+.client-item:hover, .client-item:focus {
+  color: var(--accent-color);
+}
+.clients{
+  width: 106px;
+  height: 60px;
+  fill: currentColor;
+  
+}
+
+/***------------------ Футер с ссылкой на  контактные данные ------------***/
 .footer {
   padding: 60px 0;
   background-color: var(--footer-backroung-color);
@@ -341,6 +457,57 @@ body {
   color: var(--accent-color);
 }
 
+/* ******** SVG************ */
+.footer > .container {
+    display: flex;
+    align-items: baseline;
+}
+.footer-nav{
+  margin-right: 70px;
+}
+
+.footer-social > .text{
+margin-bottom: 20px;
+font-weight: 700;
+font-size: 14px;
+line-height: calc(16 / 14);
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: var(--current-white-color);
+}
+/* После ПРИСОЕДИНЯЙТЕСЬ */
+.foter-list{
+  display: flex;
+  justify-content: center;
+}
+
+.social-list:not(:last-child){
+  margin-right: 10px;
+}
+
+.social-item-footer{
+display: flex;
+justify-content: center;
+align-items: center;
+  
+width: 44px;
+height: 44px;
+border-radius: 50%;
+  
+color: var(--current-white-color);
+background-color: rgba(255, 255, 255, 0.1);;
+}
+
+.social-item-footer:hover, .social-item-footer:focus{
+  background-color: var(--accent-color);
+}
+
+.social-icon {
+width: 20px;
+height: 20px;
+fill: currentColor;
+}
 /****** -----------------------Портфолио---------------------*****/
 
 /* <!-- Секция фильтры --> */
@@ -397,4 +564,6 @@ margin: 0 0 4px 0;
   letter-spacing: 0.03em;
 }
 
-
+.cart-work:hover{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
